# ecommerce-support-agent

./: .env.example  .gitignore  README.md  REPORT.md  REPORT.tex  STUDY_GUIDE.md  TOOL_DISCLOSURE.tex  app.py  pyproject.toml
.streamlit/: config.toml
data/catalog/: electronics_catalog.md  faq.md
data/eval/: gold_qa.json  ragas_results.json
data/orders/: generate_orders.py  orders.json
data/policies/: returns_policy.md  shipping_policy.md
docs/: TOOL_DISCLOSURE.md  architecture.md
src/eval/: ragas_eval.py
src/graph/: build_graph.py  state.py  supervisor.py
src/graph/agents/: escalation.py  input_guard.py  memory_write.py  order_lookup.py  policy_returns.py
src/guardrails/: __init__.py  checks.py
src/memory/: __init__.py  store.py
src/rag/: ingest.py  pipeline.py  retrievers.py
src/tools/: mock_order_api.py
